--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/7.isolate-fault-zone.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/7.isolate-fault-zone.md
@@ -14,7 +14,7 @@ obclient> ALTER SYSTEM ISOLATE ZONE 'zone_name';
 
 示例：
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下命令，隔离故障的机器。
 
