--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/4.create-a-resource-pool.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/4.create-a-resource-pool.md
@@ -25,7 +25,7 @@ ZONE_LIST [=] ('zone' [, 'zone'...]);
 
 示例：
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 创建资源池 `pool1` 并为其指定资源配置。
 
