--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/6.remove-a-resource-pool-from-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/6.remove-a-resource-pool-from-a-tenant.md
@@ -26,7 +26,7 @@ ALTER TENANT tenant_name RESOURCE_POOL_LIST [=](pool_name [, pool_name...]) ;
 
 ### 示例操作
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 通过修改租户 `tenant1` 的 Locality 来删除副本。
 
