--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/4.manage-tenants/1.view-tenant-information.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/4.manage-tenants/1.view-tenant-information.md
@@ -8,7 +8,7 @@
 
 `sys` 租户可以通过视图 `oceanbase.DBA_OB_TENANTS` 来查看集群中的租户信息，包括各租户的 ID、名称、Primary Zone 以及副本分布方式等。
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下语句，查看当前集群中的租户信息。
 
@@ -61,7 +61,7 @@
 
 所有用户均可以查看当前租户的信息，包括租户名、租户 ID、租户状态等。
 
-1. 用户登录到当前租户。
+1. 当前租户的用户登录到数据库。
 
 2. 执行以下语句，查看当前租户信息。
 
