--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/1.create-user-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/1.create-user-of-oracle-mode.md
@@ -65,7 +65,7 @@ tls_option:
   
 创建一个拥有最小数据库权限即连接数据库权限的用户 `test2` 的示例如下。
 
-1. 使用 `sys` 用户登录到 Oracle 租户。
+1. 使用 `sys` 用户登录集群的 Oracle 租户。
 
 2. 执行以下命令，创建用户 `test2`。
 
