--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/3.logon-failure-handling-policy-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/3.logon-failure-handling-policy-of-oracle-mode.md
@@ -147,7 +147,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
    ERROR 5039 (01007): User locked
    ```
 
-   使用 `root` 用户登录到数据库的 `sys` 租户，查看失败登录信息。
+   使用 `root` 用户登录集群的 `sys` 租户，查看失败登录信息。
 
    ```sql
    obclient> SELECT user_name,gmt_modified,failed_login_attempts,last_failed_login_svr_ip FROM
