--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/3.logon-failure-handling-policy-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/3.logon-failure-handling-policy-of-mysql-mode.md
@@ -28,7 +28,7 @@ OceanBase 数据库的 MySQL 模式通过租户级配置项 `connection_control_
 
 ## 配置示例
 
-1. 管理员登录到数据库的 MySQL 租户。
+1. MySQL 租户的租户管理员登录到数据库。
 
 2. 执行以下语句，修改配置项 `connection_control_failed_connections_threshold`、`connection_control_min_connection_delay` 与 `connection_control_max_connection_delay` 的值。
 
