--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md
@@ -6,7 +6,7 @@
 
 系统租户可以对所有租户或指定的一个或多个租户发起转储操作。
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 根据业务需求，选择合适的转储操作。
 
@@ -92,7 +92,7 @@
 
 普通租户可以对本租户发起转储操作。
 
-1. 租户管理员登录数据库。
+1. 租户管理员登录到数据库。
 
 2. 根据业务需求，选择合适的转储操作。
 
