--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/5.manually-control-a-merge.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/5.manually-control-a-merge.md
@@ -10,7 +10,7 @@
 
 具体操作如下：
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 根据业务实际情况，选择合适的命令控制合并。
 
@@ -56,11 +56,11 @@
 
       其中，`[=]` 表示等号（=）为可选；`tenant1`、`tenant2` 需要替换为实际的租户名。
 
-## 普通租户手动控制合并
+## 用户租户手动控制合并
 
 合并开始后，用户租户只能控制本租户的合并操作。
 
-1. 租户管理员登录数据库。
+1. 用户租户的租户管理员登录到数据库。
 
 2. 根据业务实际情况，选择合适的命令控制合并。
 
