--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/1.flashback/2.database-table-and-index-recycle-bin.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/1.flashback/2.database-table-and-index-recycle-bin.md
@@ -14,7 +14,7 @@
 
 ### 操作步骤
 
-1. 租户管理员登录数据库。
+1. 租户管理员登录到数据库。
 
 2. 执行以下语句，查看回收站中的对象。
 
@@ -46,7 +46,7 @@
 
 租户被创建后，默认回收站为关闭状态。如果开启了回收站，则对数据库对象进行 Drop 操作后，对象会进入到回收站。
 
-1. 租户管理员登录数据库。
+1. 租户管理员登录到数据库。
 
 2. 执行以下语句，查看回收站的状态。
 
@@ -137,7 +137,7 @@
 
 手动清理回收站的操作如下：
 
-1. 租户管理员登录数据库。
+1. 租户管理员登录到数据库。
 
 2. 手动执行以下语句，清理回收站。
 
@@ -179,7 +179,7 @@ OceanBase 数据库当前支持通过集群级配置项 `recyclebin_object_expir
 
 开启自动清理回收站的操作如下：
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下语句，开启自动清理回收站的功能并指定清理多少时间前进入回收站的对象。
 
