--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/1.flashback/5.multiple-database-versions-through-flashback-query.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/1.flashback/5.multiple-database-versions-through-flashback-query.md
@@ -30,7 +30,7 @@ OceanBase 数据库当前支持通过以下方式来进行闪回查询：
 
 在通过 `undo_retention` 变量进行闪回查询前，需要先修改 `undo_retention` 变量的值。`undo_retention` 变量的默认值为 `0`，单位为秒。
 
-1. 租户管理员登录到对应的租户。
+1. 租户管理员登录到数据库。
 
 2. 执行以下语句，修改 `undo_retention` 变量的值。
 
