--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/4.data-backup/5.view-data-backup-progress.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/4.data-backup/5.view-data-backup-progress.md
@@ -6,7 +6,7 @@
 
 系统租户可以通过 `oceanbase.CDB_OB_BACKUP_JOBS` 视图和 `oceanbase.CDB_OB_BACKUP_TASKS` 视图查看数据备份的进度。
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 查看数据备份进度。
 
