--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/5.cleaning-up-backed-up-data/1.cleaning-up-backed-up-data-automatically.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/5.cleaning-up-backed-up-data/1.cleaning-up-backed-up-data-automatically.md
@@ -16,7 +16,7 @@
 
 ### 用户租户下设置清理策略
 
-1. 租户管理员登录到用户租户。
+1. 用户租户的租户管理员登录到数据库。
 
 2. 设置清理策略，相当于开启租户的自动清理功能。
 
@@ -40,7 +40,7 @@
 
 ### 系统租户下设置清理策略
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 设置清理策略，相当于开启租户的自动清理功能。
 
@@ -73,7 +73,7 @@
 
 系统租户和用户租户均可以通过查询视图来获取当前已设置的所有清理策略。
 
-1. 系统租户或用户租户的租户管理员登录到对应的租户。
+1. 系统租户或用户租户的租户管理员登录到数据库。
 
 2. 查看租户已设置的清理策略。
 
