--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/5.cleaning-up-backed-up-data/2.stop-cleaning-backup-data.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/5.cleaning-up-backed-up-data/2.stop-cleaning-backup-data.md
@@ -12,7 +12,7 @@
 
 ### 用户租户下删除清理策略
 
-1. 租户管理员登录到用户租户下。
+1. 用户租户的租户管理员登录到数据库。
 
 2. 执行以下语句，删除清理策略。
 
@@ -32,7 +32,7 @@
 
 ### 系统租户下删除清理策略
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下语句，删除清理策略。
 
@@ -56,7 +56,7 @@
 
 执行删除清理策略操作后，您可以通过查看视图来确认清理策略是否已被删除。
 
-1. 系统租户或用户租户的租户管理员登录到对应的租户。
+1. 系统租户或用户租户的租户管理员登录到数据库。
 
 2. 确认清理策略是否已被删除。
 
@@ -89,7 +89,7 @@
 
 ### 用户租户下取消正在执行的清理任务
 
-1. 租户管理员登录到用户租户下。
+1. 用户租户的租户管理员登录到数据库。
 
 2. 执行以下语句，停止当前租户正在执行的清理任务。
 
@@ -99,7 +99,7 @@
 
 ### 系统租户下取消正在执行的清理任务
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下语句，停止指定租户正在执行的清理任务。
 
@@ -125,7 +125,7 @@
 
 执行停止清理任务的操作后，系统租户和用户租户均可以通过查看视图来确认清理任务是否已停止。
 
-1. 系统租户或用户租户的租户管理员登录到对应的租户。
+1. 系统租户或用户租户的租户管理员登录到数据库。
 
 2. 确认清理任务是否已停止。
 
