--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/1.scale-out/1.add-a-zone-to-the-cluster.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/1.scale-out/1.add-a-zone-to-the-cluster.md
@@ -12,7 +12,7 @@
 
 在集群中增加 Zone 并调整副本分布的操作如下：
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 集群中当前仅 `z1`、`z2`、`z3` 三个 Zone，需要在集群中增加 `z4`、`z5` 两个 Zone。
 
