--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/2.shrink/1.reduce-zone-from-cluster.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/2.shrink/1.reduce-zone-from-cluster.md
@@ -23,7 +23,7 @@
 
 根据业务需要，需要将租户 `tenant1` 由 5 副本降为 3 副本，即租户的 Locality 变成 `locality='F@z1,F@z2,F@z3`。本节以仅租户 `tenant1` 使用了 `z4`、`z5` 其他租户未使用 `z4`、`z5` 为例，提供缩容的操作指导。
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. （可选）如果租户使用了 z4 或 z5 作为 Primary Zone，则需要修改该租户的 Primary Zone。
 
