--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/3.scale-in-and-scale-out-of-tenant-resources/1.by-modifying-unit_config.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/3.scale-in-and-scale-out-of-tenant-resources/1.by-modifying-unit_config.md
@@ -28,7 +28,7 @@
 
 确认租户是否使用了独立的资源单元配置的操作如下：
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下语句，获取待操作的租户所属的资源配置 ID。
 
@@ -93,7 +93,7 @@ obclient>CREATE TENANT tenant1 resource_pool_list=('pool1');
 
 方法如下：
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 进入 `oceanbase` 数据库。
 
@@ -149,7 +149,7 @@ obclient>CREATE TENANT tenant1 resource_pool_list=('pool1');
 
 例如，待扩容或缩容的租户为 `tenant1`，但由于 `tenant1`、`tenant2` 均使用了 `unit1` 作为资源单元配置，因此需要创建一个新的资源单元。
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 进入 `oceanbase` 数据库。
 
