--- a/zh-CN/7.reference/2.administrator-guide/7.management/5.emergency-response/3.common-emergency-response/2.problems-caused-by-capacity-changes/4.full-tenant-memory.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/5.emergency-response/3.common-emergency-response/2.problems-caused-by-capacity-changes/4.full-tenant-memory.md
@@ -48,7 +48,7 @@
     <p>该参数调大的代价为 CPU 使用率升高，请根据具体情况决定是否开启。</p>
   </main>
 
-   具体方法如下：使用 `root` 用户登录到数据库的 `sys` 租户。
+   具体方法如下：使用 `root` 用户登录集群的 `sys` 租户。
 
    ```sql
    ALTER SYSTEM SET minor_merge_concurrency=x;
@@ -70,7 +70,7 @@
 
    在应急场景下，可以调大 `memstore_limit_percentage` 的同时，调低`freeze_trigger_percentage`，达到临时扩容和尽快转储释放的目的。
 
-   具体方法如下：使用 `root` 用户登录到数据库的 `sys` 租户。
+   具体方法如下：使用 `root` 用户登录集群的 `sys` 租户。
 
    ```sql
    ALTER SYSTEM SET freeze_trigger_percentage=40;
