--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/2.view-observer-status.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/2.view-observer-status.md
@@ -6,7 +6,7 @@
 
 您可以通过查询视图 `oceanbase.DBA_OB_SERVERS` 来查看节点的状态。
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 进入 `oceanbase` 数据库。
 
