--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/5.isolate-faulty-observer.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/5.isolate-faulty-observer.md
@@ -14,7 +14,7 @@ ALTER SYSTEM ISOLATE SERVER 'ip:port' [,'ip:port'...] [ZONE [=] 'zone']
 
 示例：
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下命令，隔离故障的机器。
 
