--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/7.delete-a-resource-pool.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/7.delete-a-resource-pool.md
@@ -18,7 +18,7 @@ obclient> DROP RESOURCE POOL pool_name;
 
 示例：
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下命令，查看待删除的资源池 `resource_pool1` 是否被租户使用。
 
