--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/6.view-resource-allocation.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/6.view-resource-allocation.md
@@ -4,7 +4,7 @@ OceanBase 数据库支持通过视图查看租户的资源分配情况。
 
 ## 通过视图查看资源的分配情况
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 进入 `oceanbase` 数据库。
 
