--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/4.manage-tenants/4.rename-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/4.manage-tenants/4.rename-a-tenant.md
@@ -14,7 +14,7 @@ obclient> ALTER TENANT old_tenant_name RENAME GLOBAL_NAME TO new_tenant_name;
 
 示例如下：
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 将租户 `tenant1` 的租户名修改为 `tenant2`。
 
