--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.modify-the-resource-configuration-of-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.modify-the-resource-configuration-of-a-tenant.md
@@ -41,7 +41,7 @@ obclient> CREATE TENANT tenant1 RESOURCE_POOL_LIST = ('pool1');
 
 **操作步骤**
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 集群中当前仅 `z1`、`z2`、`z3` 三个 Zone，需要在集群中增加 `z4`、`z5` 两个 Zone。
 
@@ -92,7 +92,7 @@ obclient> CREATE TENANT tenant1 RESOURCE_POOL_LIST = ('pool1');
 
 **操作步骤**
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 删除租户在 `z5` 上的数据副本。
 
