--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/4.manually-trigger-a-merge.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/4.manually-trigger-a-merge.md
@@ -8,7 +8,7 @@
 
 如果当前集群未开启全局合并开关，请参考以下操作开启全局合并开关。
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 确认全局合并开关是否已开启。
 
@@ -30,7 +30,7 @@
 
 具体操作如下：
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下命令，发起合并。
 
@@ -66,7 +66,7 @@
 
 用户租户只能发起对本租户的合并操作。
 
-1. 租户管理员登录数据库。
+1. 用户租户的租户管理员登录到数据库。
 
 2. 对本租户发起合并。
 
