--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/5.view-merge-process.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/5.view-merge-process.md
@@ -8,7 +8,7 @@
 
 系统租户可以通过查询 `oceanbase.CDB_OB_ZONE_MAJOR_COMPACTION` 和 `oceanbase.CDB_OB_MAJOR_COMPACTION` 视图来观察所有租户的的合并信息。
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下语句，查看合并进度。
 
@@ -214,7 +214,7 @@
 
 用户租户可以通过查询 `DBA_OB_ZONE_MAJOR_COMPACTION` 和 `DBA_OB_MAJOR_COMPACTION` 来观察本租户的合并过程。
 
-1. 租户管理员登录数据库。
+1. 用户租户的租户管理员登录到数据库。
 
 2. 执行以下语句，查看合并进度。
 
