--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/1.flashback/3.tenant-recycle.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/1.flashback/3.tenant-recycle.md
@@ -32,7 +32,7 @@
 
 ### 查看操作
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下语句，查看回收站对象。
 
@@ -66,7 +66,7 @@
 
 具体操作如下：
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下语句，查看回收站状态。
 
@@ -118,7 +118,7 @@
 
 在 `sys` 租户中执行 Purge 操作，可以将回收站中的租户或所有对象彻底删除。
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 根据业务需要，选择合适的语句，清理回收站。
 
