--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/3.log-archive/1.preparation-before-log-backup.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/3.log-archive/1.preparation-before-log-backup.md
@@ -6,7 +6,7 @@
 
 配置归档目的端的操作主要是设置 `LOCATION`、`PIECE_SWITCH_INRERVAL` 和 `BINDING` 属性。
 
-1. 用户租户的租户管理员登录数据库。
+1. 用户租户的租户管理员登录到数据库。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
