--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/3.log-archive/7.view-log-backup-history.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/3.log-archive/7.view-log-backup-history.md
@@ -6,7 +6,7 @@
 
 `sys` 租户可以通过 `oceanbase.CDB_OB_ARCHIVELOG_SUMMARY` 视图查看集群中所有租户的归档历史信息。
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下语句，查看集群所有租户的归档历史信息。
 
@@ -105,7 +105,7 @@
 
 用户租户可以通过 `oceanbase.DBA_OB_ARCHIVELOG_SUMMARY` 视图（MySQL 模式）和 `sys.DBA_OB_ARCHIVELOG_SUMMARY` 视图（Oracle 模式）查看本租户的归档历史。
 
-1. 用户租户的租户管理员登录到对应的租户。
+1. 用户租户的租户管理员登录到数据库。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
