--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/4.data-backup/3.initiate-incremental-data-backup.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/4.data-backup/3.initiate-incremental-data-backup.md
@@ -16,7 +16,7 @@
 
 用户租户可以对本租户发起增量数据备份，不会影响其他租户。
 
-1. 租户管理员登录到相应的租户。
+1. 用户租户的租户管理员登录到数据库。
 
    本示例中，您可以使用 `root` 用户登录 `mysql_tenant` 租户；或者也可以使用 `sys` 用户登录 `oracle_tenant` 租户。
 
@@ -30,7 +30,7 @@
 
 `sys` 租户可以对集群中的所有租户或指定租户发起增量数据备份。
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下语句，发起增量数据备份。
 
