--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/2.shrink/2.decrease-observer-node-from-zone.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/2.shrink/2.decrease-observer-node-from-zone.md
@@ -24,7 +24,7 @@ obclient>CREATE TENANT tenant1 resource_pool_list=('pool1');
 
 示例如下：
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下命令，从集群中删除各 Zone 中的 OBServer 节点。
 
