--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
@@ -40,7 +40,7 @@ obclient> CREATE TENANT MySQL resource_pool_list=('pool1');
 
 随着业务量的不断变大，每个 Zone 上 1 个 Unit 已经无法承载当前的业务量，因此需要考虑调大 `UNIT_NUM` 来提高租户的服务能力，以满足新的业务需求。
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 进入 `oceanbase` 数据库。
 
