根据萧峯、岩元的修改方案同步

--- a/zh-CN/6.manage/4.high-availability/5.flashback/3.recyclebin-management/1.objects-supported-by-recycle-bin.md
+++ b/zh-CN/6.manage/4.high-availability/5.flashback/3.recyclebin-management/1.objects-supported-by-recycle-bin.md
@@ -4,7 +4,9 @@
 
 回收站在原理上说就是一个数据字典表，放置用户删除的数据库对象信息。用户删除的东西被放入回收站后，其实仍然占据着物理空间，除非您手动进行清除（ `PURGE` ）或者对象定期被数据库系统删除。
 
-在当前版本中，支持进入回收站的对象有索引、表、库和租户，各模式回收站对象的支持情况如下表所示。
+在当前版本中，支持进入回收站的对象有索引、表、库和租户。由于当前仅 `sys` 租户可以删除租户，故 MySQL 用户租户和 Oracle 用户租户被删除后，只能进入 `sys` 租户的回收站中。
+
+`sys` 租户支持管理数据库、表、索引和租户回收站对象。MySQL 用户租户支持管理数据库、表和索引回收站对象。Oracle 用户租户支持管理表和索引回收站对象。
 
 |   **模式**   | **索引（Index）** | **表（Table）** | **数据库（Database）** | **租户（Tenant）** |
 |--------------|-------------------|-----------------|-----------------------|--------------------|
