--- a/zh-CN/6.manage/4.high-availability/5.flashback/3.recyclebin-management/2.turn-the-recycle-bin-on-or-off.md
+++ b/zh-CN/6.manage/4.high-availability/5.flashback/3.recyclebin-management/2.turn-the-recycle-bin-on-or-off.md
@@ -2,9 +2,9 @@
 
 在 OceanBase 数据库中，默认回收站为关闭状态，如果开启了回收站功能，则在对某个数据库对象或租户执行 Drop 操作后，该对象或租户就会进入回收站。
 
-## 注意事项
+## 背景信息
 
-仅 `sys` 租户可以开启或关闭租户回收站功能。MySQL 用户租户只能开启数据库、表和索引的回收站功能；Oracle 用户租户只能开启表和索引的回收站功能。
+`sys` 租户开启回收站后，可以查看数据库、表、索引以及租户回收站对象；MySQL 用户租户开启回收站后，可以查看数据库、表和索引回收站对象；Oracle 用户租户开启回收站后，可以查看表和索引回收站对象。
 
 ## 操作步骤
 
@@ -39,7 +39,7 @@
 
    <main id="notice" type='notice'>
         <h4>注意</h4>
-        <p>如果需要开启或关闭租户的回收站功能，则需要使用 <code>sys</code> 租户通过开启或关闭 Global 级别的回收站来完成。</p>
+        <p>如果需要管理租户回收站对象，则需要使用 <code>sys</code> 租户通过开启或关闭 Global 级别的回收站来完成。</p>
    </main>
 
    由于变量 `recyclebin` 为 Bool 类型的变量，故支持多种取值，其中：
