--- a/zh-CN/6.manage/4.high-availability/5.flashback/3.recyclebin-management/3.view-the-recycle-bin-objects.md
+++ b/zh-CN/6.manage/4.high-availability/5.flashback/3.recyclebin-management/3.view-the-recycle-bin-objects.md
@@ -4,7 +4,7 @@
 
 ## 注意事项
 
-当前仅 `sys` 租户可以查看租户的回收站对象；其他用户租户只能查看数据库、表和索引的回收站对象。
+由于当前仅 `sys` 租户可以删除租户，故 MySQL 模式和 Oracle 模式的租户被删除后，只能进入 `sys` 租户的回收站中。对于 `sys` 租户，除了能查看本租户的数据库、表和索引回收站对象外，还可以查看系统内所有的租户回收站对象；对于 MySQL 用户租户，只能查看数据库、表和索引回收站对象；对于 Oracle 用户租户，只能查看表和索引回收站对象。
 
 ## 背景信息
 
