--- a/zh-CN/6.manage/4.high-availability/5.flashback/3.recyclebin-management/4.flashback-table-before-drop.md
+++ b/zh-CN/6.manage/4.high-availability/5.flashback/3.recyclebin-management/4.flashback-table-before-drop.md
@@ -6,7 +6,7 @@
 
 * 通过 `FLASHBACK` 语句恢复表时，表上的索引也会被恢复。
 
-* 闪回表时可修改待闪回对象的名称，但是不能与已有对象重名。
+* 闪回表时可修改待闪回表的名称，但是不能与已有对象重名。否则可能会报错。
 
 * 对于 MySQL 租户，从回收站中闪回表前，如果该表从属的数据库已删除，则需要先恢复数据库再恢复表。恢复数据库的相关操作请参见 [闪回数据库对象](../../../7.reference/2.administrator-guide/5.backup-and-recovery/1.flashback/2.database-table-and-index-recycle-bin.md)。
 
@@ -43,7 +43,7 @@
      obclient [(none)]> FLASHBACK TABLE object_name TO BEFORE DROP;
      ```
 
-     其中，`object_name` 表示表对象在回收站中的名称。
+     其中，`object_name` 表示表对象在回收站中的名称。也可以使用原始名称，建议使用回收站中的名称。
 
      示例如下：
 
@@ -51,7 +51,7 @@
      obclient [(none)]> FLASHBACK TABLE __recycle_$_100017_1673426335331800 TO BEFORE DROP;
      ```
 
-     执行该语句后，恢复后的表名为进入回收站前的名称，且该表从属的数据库仍为表删除前从属的数据库。
+     执行该语句后，恢复后的表名为进入回收站前的名称，且该表从属的数据库仍为表删除前从属的数据库。如果该表进入回收站前的名称与数据库中的已有表重名，则系统会报错。
 
    * 从回收站中恢复表并重命名
 
@@ -59,7 +59,7 @@
      obclient [(none)]> FLASHBACK TABLE object_name TO BEFORE DROP RENAME To new_table_name;
      ```
 
-     其中，`object_name` 表示表对象在回收站中的名称；`new_table_name` 表示表恢复后重命名的表名。
+     其中，`object_name` 表示表对象在回收站中的名称，也可以使用原始名称，建议使用回收站中的名称；`new_table_name` 表示表恢复后重命名的表名。
 
      示例如下：
 
@@ -67,7 +67,7 @@
      obclient [(none)]> FLASHBACK TABLE __recycle_$_100017_1673426335331800 TO BEFORE DROP RENAME To infotable;
      ```
 
-     执行该语句后，恢复后的表名为重命名的表名，且该表从属的数据库仍为表删除前从属的数据库。
+     执行该语句后，恢复后的表名为重命名的表名，且该表从属的数据库仍为表删除前从属的数据库。如果重命名的表名与数据库中的已有表重名，则系统会报错。
 
    * 从回收站中将表恢复到指定的数据库并重命名。
 
@@ -75,7 +75,7 @@
      obclient [(none)]> FLASHBACK TABLE object_name TO BEFORE DROP RENAME To database_name.new_table_name;
      ```
 
-     其中，`object_name` 表示表对象在回收站中的名称；`user_name.new_table_name` 表示表恢复后重命名的表名及其从属的数据库。
+     其中，`object_name` 表示表对象在回收站中的名称，也可以使用原始名称，建议使用回收站中的名称；`user_name.new_table_name` 表示表恢复后重命名的表名及其从属的数据库。
 
      示例如下：
 
@@ -83,7 +83,7 @@
      obclient [(none)]> FLASHBACK TABLE __recycle_$_100017_1673426335331800 TO BEFORE DROP RENAME To test.infotable;
      ```
 
-     执行该语句后，恢复后的表名为重命名的表名，且该表从属的数据库为指定的数据库。
+     执行该语句后，恢复后的表名为重命名的表名，且该表从属的数据库为指定的数据库。如果重命名的表名与数据库中的已有表重名，则系统会报错。
 
 ## Oracle 模式下闪回表
 
@@ -114,7 +114,7 @@
      obclient [SYS]> FLASHBACK TABLE object_name TO BEFORE DROP;
      ```
 
-     其中，`object_name` 表示表对象在回收站中的名称。
+     其中，`object_name` 表示表对象在回收站中的名称。也可以使用原始名称，建议使用回收站中的名称。
 
      示例如下：
 
@@ -122,7 +122,7 @@
      obclient [SYS]> FLASHBACK TABLE RECYCLE_$_100017_1673857717700096 TO BEFORE DROP;
      ```
 
-     执行该语句后，恢复后的表名为进入回收站前的名称，且该表从属的 Schema 对象仍为表删除前从属的 Schema 对象。
+     执行该语句后，恢复后的表名为进入回收站前的名称，且该表从属的 Schema 对象仍为表删除前从属的 Schema 对象。如果该表进入回收站前的名称与已有表重名，则系统会报错。
 
    * 从回收站中恢复表并重命名。
 
@@ -130,7 +130,7 @@
      obclient [SYS]>FLASHBACK TABLE object_name TO BEFORE DROP RENAME To new_table_name;
      ```
 
-     其中，`object_name` 表示表对象在回收站中的名称。
+     其中，`object_name` 表示表对象在回收站中的名称。也可以使用原始名称，建议使用回收站中的名称。
 
      示例如下：
 
@@ -138,7 +138,7 @@
      obclient [SYS]> FLASHBACK TABLE RECYCLE_$_100017_1673857717700096 TO BEFORE DROP RENAME To infotable;
      ```
 
-     执行该语句后，恢复后的表名为重命名的表名，且该表从属的 Schema 对象仍为表删除前从属的 Schema 对象。
+     执行该语句后，恢复后的表名为重命名的表名，且该表从属的 Schema 对象仍为表删除前从属的 Schema 对象。如果重命名的表名与已有表重名，则系统会报错。
 
    * 从回收站中恢复表并指定表恢复后从属的 Schema 对象。
 
@@ -146,15 +146,14 @@
      obclient [SYS]> FLASHBACK TABLE object_name TO BEFORE DROP RENAME To schema_name.new_table_name;
      ```
 
-     其中，`object_name` 表示表对象在回收站中的名称；`schema_name.new_table_name` 表示表恢复后重命名的表名及其从属的 Schema 对象（Schema 对象名与用户名同名）。
-
+     其中，`object_name` 表示表对象在回收站中的名称，也可以使用原始名称，建议使用回收站中的名称；`schema_name.new_table_name` 表示表恢复后重命名的表名及其从属的 Schema 对象（Schema 对象名与用户名同名）。
      示例如下：
 
      ```sql
      obclient [SYS]> FLASHBACK TABLE RECYCLE_$_100017_1673857717700096 TO BEFORE DROP RENAME To info.infotable;
      ```
 
-     执行该语句后，恢复后的表名为重命名的表名，且该表从属的 Schema 对象为指定的 Schema 对象。
+     执行该语句后，恢复后的表名为重命名的表名，且该表从属的 Schema 对象为指定的 Schema 对象。如果重命名的表名与已有表重名，则系统会报错。
 
 ## 相关文档
 
