--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
@@ -99,13 +99,22 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
      ```
 
      更多 `ALTER USER` 语句的详细信息，参见 [ALTER USER](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/12.alter-user-of-oracle-mode.md) 。
+3. 修改 Profile
+
+   对于已经创建好的 Profile 可以通过 `ALTER PROFILE` 语句进行修改。
+   更多 `ALTER PROFILE` 语句的详细信息，参见 [ALTER PROFILE](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/4.alter-profile-of-oracle-mode.md)
+
+<main id="notice" type='notice'>
+    <h4>注意</h4>
+    <p>对于已经被锁定的用户无法通过 <code>ALTER PROFILE</code> 语句修改 <code>FAILED_LOGIN_ATTEMPTS</code> 的方式来进行解锁。对带有 <code>ALTER PROFILE</code> 语句的配置文件所做的更改仅影响其后续会话中的用户，而不影响其当前会话中的用户。</p>
+  </main>
 
 ## 操作示例
 
 1. 使用 sys 用户登录集群的 Oracle 租户。
 
     ```shell
-    obclient -usys@oracle -h127.1 -P2881 -  P***1*** 
+    $obclient -usys@oracle -h127.1 -P2881 -  P***1*** 
     ```
 
 2. 创建 Profile 并设置连续错误登录策略。
@@ -151,7 +160,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
    当连续输入 5 次错误密码时，用户会被锁定一天。
 
    ```shell
-   $ obclient -h127.1 -P2881 -utest@oracle -p**123**;
+   $ obclient -h127.1 -P2881 -usecuser@oracle -p**123**;
    obclient: [Warning] Using a password on the command line interface can be insecure.
    ERROR 5039 (01007): User locked
    ```
@@ -172,7 +181,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
 
    <main id="notice" type='notice'>
     <h4>注意</h4>
-    <p>解锁用户的操作一般由管理员完成，普通用户如果需要执行锁定和解锁操作，必须具备全局的 <code>ALTER USER</code> 权限。关于查看用户权限和授权的相关操作，参见 <a href="../2.oracle-3/4.view-user-permissions.md">查看用户权限</a> 和<a href="../2.oracle-3/5.modify-user-permissions-1.md">修改用户权限</a>。
+    <p>解锁用户的操作一般由管理员完成，普通用户如果需要执行锁定和解锁操作，必须具备全局的 <code>ALTER USER</code> 权限。关于查看用户权限和授权的相关操作，参见 <a href="../2.oracle-3/4.view-user-permissions.md">查看用户权限</a> 和<a href="../2.oracle-3/5.modify-user-permissions-1.md">修改用户权限</a>
     </main>
 
    ```shell
