--- a/zh-CN/6.manage/5.security-and-permissions/5.data-storage-encryption/3.data-storage-encryption-of-oracle-mode/3.unencrypt-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/5.data-storage-encryption/3.data-storage-encryption-of-oracle-mode/3.unencrypt-of-oracle-mode.md
@@ -31,14 +31,35 @@ obclient> SHOW CREATE TABLE t1;
 ## 将表从加密表空间中移出
 
 1. 管理员登录到集群的 Oracle 租户。
+2. 对表执行渐进合并
 
-2. 创建未加密的表空间 `ts2`。
+   1. 将 `progressive_merge_num` 的值设置为大于 `1` 的数，并执行 `SHRINK SPACE` 操作，准备做渐进合并。
+   示例如下：
+
+      ```shell
+      obclient> ALTER TABLE t1 SET progressive_merge_num = 3;       
+      obclient> ALTER TABLE t1 SHRINK SPACE;
+      ```
+
+   2. 手动发起多轮渐进合并。
+      发起一轮渐进合并的语句如下：
+
+      ```shell
+      obclient> ALTER SYSTEM MAJOR FREEZE;
+      ```
+
+   <main id="notice" type='explain'>
+      <h4>说明</h4>
+      <p>解除加密是异步过程，解密过程需要对表进行渐进合并保证所有数据解密。</p>
+   </main>
+
+3. 创建未加密的表空间 `ts2`。
 
    ```shell
    obclient> CREATE TABLESPACE ts2;
    ```
 
-3. 将表 `t1` 从加密的表空间 `sectest_ts1` 中移到未加密的表空间 `ts2` 中。
+4. 将表 `t1` 从加密的表空间 `sectest_ts1` 中移到未加密的表空间 `ts2` 中。
 
    ```shell
    obclient> ALTER TABLE t1 TABLESPACE ts2;
@@ -59,7 +80,7 @@ obclient> SHOW CREATE TABLE t1;
    1 row in set
    ```
 
-4. 查询 `V$OB_ENCRYPTED_TABLES` 视图，确认表的加密状态。
+5. 查询 `V$OB_ENCRYPTED_TABLES` 视图，确认表的加密状态。
 
     ```shell
     obclient>  SELECT * FROM V$OB_ENCRYPTED_TABLES;
@@ -75,5 +96,5 @@ obclient> SHOW CREATE TABLE t1;
 
 ## 相关文档
 
-* [为新创建的表设置透明加密](1.configure-internal-storage-encryption-of-oracle-mode.md)
-* [为已有表设置透明加密](2.set-storage-encryption-for-existing-tables-of-oracle-mode.md)
+* [为新创建的表设置存储加密](1.configure-internal-storage-encryption-of-oracle-mode.md)
+* [为已有表设置存储加密](2.set-storage-encryption-for-existing-tables-of-oracle-mode.md)
