--- a/zh-CN/6.manage/5.security-and-permissions/5.data-storage-encryption/2.data-storage-encryption-of-mysql-mode/3.unencrypt-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/5.data-storage-encryption/2.data-storage-encryption-of-mysql-mode/3.unencrypt-of-mysql-mode.md
@@ -33,15 +33,37 @@ obclient> SHOW CREATE TABLE t1;
 
 1. 管理员用户登录到数据库的 MySQL 租户。
 
-2. 创建未加密的表空间 `ts2`。
+2. 对表执行渐进合并
+
+   1. 将 `progressive_merge_num` 的值设置为大于 `1` 的数，并执行 `OPTIMIZE` 命令，准备做渐进合并。
+   示例如下：
+
+      ```shell
+      obclient> ALTER TABLE t1 SET progressive_merge_num = 3;       
+      obclient> OPTIMIZE TABLE t1;
+      ```
+
+   2. 手动发起多轮渐进合并。
+   发起一轮渐进合并的语句如下：
+
+      ```shell
+      obclient> ALTER SYSTEM MAJOR FREEZE;
+      ```
+
+      <main id="notice" type='explain'>
+         <h4>说明</h4>
+         <p>解除加密是异步过程，解密过程需要对表进行渐进合并保证所有数据解密。</p>
+      </main>
+
+3. 创建未加密的表空间 `ts2`。
 
    ```shell
    obclient> CREATE TABLESPACE ts2;
    ```
 
-3. 进入表所在的数据库。
+4. 进入表所在的数据库。
 
-4. 将表 `t1` 从加密的表空间 `sectest_ts1` 中移到未加密的表空间 `ts2` 中。
+5. 将表 `t1` 从加密的表空间 `sectest_ts1` 中移到未加密的表空间 `ts2` 中。
 
    ```shell
    obclient> ALTER TABLE t1 TABLESPACE ts2;
@@ -62,7 +84,7 @@ obclient> SHOW CREATE TABLE t1;
    1 row in set
    ```
 
-5. 查询 `oceanbase.V$OB_ENCRYPTED_TABLES` 视图，确认表的加密状态。
+6. 查询 `oceanbase.V$OB_ENCRYPTED_TABLES` 视图，确认表的加密状态。
 
    ```shell
    obclient>  SELECT * FROM oceanbase.V$OB_ENCRYPTED_TABLES;
@@ -78,5 +100,5 @@ obclient> SHOW CREATE TABLE t1;
 
 ## 相关文档
 
-* [为新创建的表设置透明加密](1.configure-internal-storage-encryption-of-mysql-mode.md)
-* [为已有表设置透明加密](2.set-storage-encryption-for-existing-tables-of-mysql-mode.md)
+* [为新创建的表设置存储加密](1.configure-internal-storage-encryption-of-mysql-mode.md)
+* [为已有表设置存储加密](2.set-storage-encryption-for-existing-tables-of-mysql-mode.md)
