--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/3.modify-partition-rules-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/3.modify-partition-rules-of-oracle-mode.md
@@ -27,7 +27,7 @@ partition_option:
     range_partition_option | list_partition_option | hash_partition_option
 
 range_partition_option：
-   RANGE (expr(column_name) | column_name) 
+   RANGE (column_name) 
       (PARTITION partition_name VALUES LESS THAN(expr)
        [, PARTITION partition_name VALUES LESS THAN (expr)]
        [, PARTITION partition_name VALUES LESS THAN (MAXVALUE)]
@@ -82,13 +82,13 @@ hash_partition_option：
 ALTER TABLE table_name MODIFY PARTITION BY partition_option;
 
 partition_option:
-    RANGE(expr(column_name) | column_name) subpartition_option (range_partition_option)
+    RANGE(column_name) subpartition_option (range_partition_option)
    | LIST(expr(column_name) | column_name) subpartition_option (list_partition_option)
    | HASH(expr(column_name) | column_name) {(hash_partition_option)
                                              | PARTITIONS partition_count }
 subpartition_option:
   SUBPARTITION BY 
-    RANGE(expr(column_name) | column_name) SUBPARTITION TEMPLATE(range_subpartition_option)
+    RANGE(column_name) SUBPARTITION TEMPLATE(range_subpartition_option)
    | LIST(expr(column_name) | column_name) SUBPARTITION TEMPLATE(list_subpartition_option)
    | HASH(expr(column_name) | column_name) { SUBPARTITION TEMPLATE (hash_subpartition_option)
                        | SUBPARTITIONS subpartition_count }
@@ -127,7 +127,7 @@ hash_subpartition_option:
 ALTER TABLE table_name MODIFY PARTITION BY partition_option;
 
 partition_option:
-    RANGE(expr(column_name) | column_name) subpartition_option 
+    RANGE(column_name) subpartition_option 
                                          { range_partition_option (subpartition_option_list)
                                            [, range_partition_option (subpartition_option_list) ...]
                                           }
@@ -142,7 +142,7 @@ partition_option:
 
 subpartition_option:
 SUBPARTITION BY 
-    RANGE(expr(column_name) | column_name)
+    RANGE(column_name)
   | LIST(expr(column_name) | column_name)
   | HASH(expr(column_name) | column_name)
 
