删除多余的文件及文件夹

--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/2.initiate-full-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/2.initiate-full-data-backup.md
@@ -1,10 +1,10 @@
-# 发起数据备份
+# 发起全量数据备份
 
 日志归档开始后，您可以发起数据备份。
 
 ## 前提条件
 
-在执行数据备份前，您需要进行以下事项：
+在执行全量数据备份前，您需要进行以下事项：
 
 * 确认当前已开启日志归档，仅当日志归档任务的 `STATUS` 为 `DOING` 时，才能开始数据备份。
 
@@ -79,6 +79,9 @@
 
       命令执行成功后，在本示例中，系统会对集群中的 `mysql_tenant` 租户发起全量数据备份。
 
+   全量备份过程中，可以实时查看全量备份进度，具体操作请参见 [查看数据备份进度](5.view-data-backup-progress.md)。
+  
+
 ### 用户租户发起全量备份
 
 用户租户可以对本租户发起全量数据备份，不会影响其他租户。
@@ -92,6 +95,10 @@
     ```sql
     obclient [(none)]> ALTER SYSTEM BACKUP DATABASE;
     ```
+   
+   命令执行成功后，系统会对本租户发起全量数据备份。
+   
+   全量备份过程中，可以实时查看全量备份进度，具体操作请参见 [查看数据备份进度](5.view-data-backup-progress.md)。
 
 ## 相关文档
 
