--- a/zh-CN/6.manage/6.backup-and-recovery/1.overview-of-physical-backup-and-recovery.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/1.overview-of-physical-backup-and-recovery.md
@@ -2,52 +2,148 @@
 
 备份恢复是 OceanBase 数据库高可用特性的核心组件，主要用于保障数据的安全，包括预防存储介质损坏和用户的错误操作等。如果存储介质损坏或者用户误操作而导致了数据丢失，可以通过恢复的方式恢复用户的数据。
 
-## 概述
-
-备份恢复是 OceanBase 数据库高可用特性的核心组件，主要用于保障数据的安全，包括预防存储介质损坏和用户的错误操作等。如果存储介质损坏或者用户误操作而导致了数据丢失，可以通过恢复的方式恢复用户的数据。
-
 OceanBase 数据库 V4.0.0 版本支持 OSS、NFS 两种备份介质，提供了备份、恢复、清理三大功能。
 
-OceanBase 数据库支持租户级别的物理备份。物理备份由数据备份、日志归档两种数据组成，故物理备份由日志归档和数据备份两个功能组合而成：
+OceanBase 数据库支持租户级别的物理备份。物理备份由数据备份、日志归档两种数据组成，故物理备份由数据备份和日志归档两个功能组合而成。
 
-* 日志归档是指日志数据的自动归档功能，OBServer 会定期将日志数据归档到指定的备份路径。这个动作是全自动的，不需要外部定期触发。
+数据备份指的是备份数据的功能，该功能分为全量备份和增量备份两种：
 
-* 数据备份指的是备份数据的功能，该功能分为全量备份和增量备份两种：
+* 全量备份是指备份所有的宏块。
 
-  * 全量备份是指备份所有的宏块。
+* 增量备份是指备份上一次备份以后新增和修改过的宏块。
 
-  * 增量备份是指备份上一次备份以后新增和修改过的宏块。
+数据备份功能在备份目的地创建的目录以及各目录下保存的文件类型如下所示。
+
+```javasript
+/data_backup_dest/ #用户设置的数据备份路径
+├── format                                          // 格式化信息
+├── check_file
+│   └── 1002_connect_file_20220601T010101          //联通性检查文件,后缀为日期加时间，格式为YYYYMMDDTHHMMSS
+├── backup_sets  // backup set 占位符，用于list
+│   ├── backup_set_1_full_start                   // 全量备份起始占位符
+│   ├── backup_set_1_full_end_success_20220602T0200510   // 全量备份结束占位符
+│   ├── backup_set_2_inc_start                  // 增量备份起始占位符
+│   └── backup_set_2_inc_end_success_20220609T021001   // 增量备份结束占位符
+├── backup_set_1_full
+│   ├── backup_set_1_full_20220602T010000_20220602T0200510  //占位符，展示备份的开始和结束时间。
+│   ├── single_backup_set_info               //当前备份集的元信息
+│   ├── tenant_backup_set_infos              //当前租户的全量备份集信息
+│   ├── infos
+│   │   ├── data_info_turn_1                // turn 1下的租户级备份文件
+│   │   │   ├── tablet_log_stream_info      // tablet 与 日志流映射文件
+│   │   │   ├── tenant_major_data_macro_range_index // major 宏块索引
+│   │   │   ├── tenant_major_data_meta_index // major meta 索引
+│   │   │   ├── tenant_major_data_sec_meta_index // major 逻辑id与物理id映射
+│   │   │   ├── tenant_minor_data_macro_range_index // minor 宏块索引
+│   │   │   ├── tenant_minor_data_meta_index // minor meta 索引
+│   │   │   └── tenant_minor_data_sec_meta_index // minor 逻辑id与物理id映射
+│   │   ├── diagnose_info                   //备份集诊断信息文件
+│   │   ├── locality_info                   //当前备份集的所属租户的locality信息
+│   │   └── meta_info                       //租户级别的日志流元信息文件，包含所有日志流的元信息。
+│   │       ├── ls_attr_info_turn_1
+│   │       └── ls_meta_infos
+│   ├── logstream_1                         // 日志流1
+│   │   ├── major_data_turn_1_retry_0       // turn 1,retry 0下的基线数据
+│   │   │   ├── macro_block_data.0          // 一个数据文件，512MB~4GB
+│   │   │   ├── macro_range_index           // macro索引
+│   │   │   ├── meta_index                  // meta索引
+│   │   │   └── sec_meta_index              // 逻辑id与物理id映射文件。
+│   │   ├── meta_info_turn_1_retry_0        // turn 1,retry 0下的日志流元信息文件
+│   │   │   ├── ls_meta_info                // 日志流元信息
+│   │   │   └── tablet_info                 // 日志流tablet列表
+│   │   ├── minor_data_turn_1_retry_0       // turn 1,retry 0下的转储数据
+│   │   │   ├── macro_block_data.0          
+│   │   │   ├── macro_range_index
+│   │   │   ├── meta_index
+│   │   │   └── sec_meta_index
+│   │   └── sys_data_turn_1_retry_0         //turn 1, retry 0下的系统tablet数据
+│   │       ├── macro_block_data.0
+│   │       ├── macro_range_index
+│   │       ├── meta_index
+│   │       └── sec_meta_index
+│   └──  logstream_1001
+│       ├── major_data_turn_1_retry_0
+│       │   ├── macro_block_data.0
+│       │   ├── macro_range_index
+│       │   ├── meta_index
+│       │   └── sec_meta_index
+│       ├── meta_info_turn_1_retry_0
+│       │   ├── ls_meta_info
+│       │   └── tablet_info
+│       ├── minor_data_turn_1_retry_0
+│       │   ├── macro_block_data.0
+│       │   ├── macro_range_index
+│       │   ├── meta_index
+│       │   └── sec_meta_index
+│       └── sys_data_turn_1_retry_0
+│           ├── macro_block_data.0
+│           ├── macro_range_index
+│           ├── meta_index
+│           └── sec_meta_index
+├── backup_set_2_inc                         //增量备份目录，与全备一致
+```
+
+日志归档是指日志数据的自动归档功能，OBServer 节点会定期将日志数据归档到指定的备份路径。这个动作是全自动的，不需要外部定期触发。
+
+日志归档功能在备份目的地创建的目录以及各目录下保存的文件类型如下所示。
+
+```sql
+/log_archive_dest/ # 用户设置的日志归档根目录
+  ├── format # 格式化信息
+  ├── check_file
+  │   └── 1002_connect_file_20220601T010101 //联通性检查文件,后缀为日期加时间，格式为YYYYMMDDTHHMMSS
+  ├── rounds # rounds占位符目录
+  |   ├── round_d1001r1_start # round开始占位符
+  |   ├── round_d1001r1_end # round结束占位符
+  |   ├── round_d1001r2_end # round结束占位符
+  ├── pieces # piece占位符目录
+  |   ├── piece_d1001r1p1_start_20220601T010101 # piece开始占位符，piece_DSETID_ROUND_ID_PIECEID_DATE_start
+  |   ├── piece_d1001r1p1_end_20220602T010101   # piece结束占位符，piece_DSETID_ROUND_ID_PIECEID_DATE_end
+  |   ├── piece_d1001r1p2_start_20220602T010101 # piece开始占位符，piece_DSETID_ROUND_ID_PIECEID_DATE_start
+  |   ├── piece_d1001r1p2_end_20220602T120000 # piece开始占位符，piece_DSETID_ROUND_ID_PIECEID_DATE_start
+  |   ├── piece_d1001r2p3_start_20220603T080000 # piece开始占位符，piece_DSETID_ROUND_ID_PIECEID_DATE_start
+  ├── piece_d1001r1p1 # piece目录(frozen piece)
+  |   ├──piece_d1001r1p2_20220601T010101_20220602T010101
+  |   ├──single_piece_info
+  |   ├──tenant_archive_piece_infos
+  |   ├──checkpoint # checkpoint目录
+  |   ├── ├──checkpoint_info_0
+  |   ├── ├──checkpoint_info_1
+  |   ├──piece_file_info # 所有日志流文件列表
+  |   ├──logstream_0 # 日志流目录
+  |   ├── ├──ls_file_info # 日志流文件列表
+  |   |   ├── 1 # 日志流文件
+  |   |   ├── 2
+  |   |   ├── 3
+  |   ├──logstream_1 # 日志流目录
+  |   ├── ├──ls_file_info # 日志流文件列表
+  |   |   ├── 1 # 日志流文件
+  |   |   ├── 2
+  |   |   ├── 3
+  ├── piece_d1001r1p2 # piece目录(frozen piece)
+  |   ├──piece_d1001r1p2_20220602T010101_20220602T120000
+  |   ├──single_piece_info
+  |   ├──tenant_archive_piece_infos
+  |   ├──checkpoint # checkpoint目录
+  |   ├── ├──checkpoint_info_0
+  |   ├──piece_file_info # 所有日志流文件列表
+  |   ├──logstream_0 # 日志流目录
+  |   ├── ├──ls_file_info # 日志流文件列表
+  |   |   ├── 4 # 日志流文件
+  |   |   ├── 5
+  |   ├──logstream_1 # 日志流目录
+  |   ├── ├──ls_file_info # 日志流文件列表
+  |   |   ├── 4 # 日志流文件
+  ├── piece_d1001r2p3 # piece目录(active piece)
+  |   ├──tenant_archive_piece_infos
+  |   ├──checkpoint # checkpoint目录
+  |   ├── ├──checkpoint_info_0
+  |   ├──logstream_0 # 日志流目录
+  |   |   ├── 6 # 日志流文件
+  |   ├──logstream_1 # 日志流目录
+  |   |   ├── 5 # 日志流文件
+```
 
 OceanBase 数据库支持租户级别的恢复，恢复是基于已有数据的备份重建新租户的过程。用户只需要一个 `alter system restore tenant` 命令，就可以完成整个恢复过程。恢复过程包括租户系统表和用户表的 Restore 和 Recover 过程。Restore 是将恢复需要的基线数据恢复到目标租户的 OBServer，Recover 是将基线对应的日志恢复到对应的 OBServer。
 
-## 物理备份
-
-当用户用系统租户登录到备份集群以后，需要先用 SQL 发起日志归档，等日志归档发起完成启动阶段以后，才可以发起数据备份。
-
-日志归档是定期备份到备份目的端的，只需要用户发起一次 `alter system archivelog`，日志归档就会在后台持续进行。日志归档是由每个日志流的 Leader 负责定期将该日志流的日志归档到备份介质指定的路径，RS（RootService）负责定期统计日志归档的进度，并更新到内部表。
-
-数据备份是需要用户触发的，比较常见的场景是周六触发一次全量备份，周二和周四触发一次增量备份。当用户发起数据备份请求时，该请求会首先被转发到 Root Service 所在的节点上；Root Service 会根据当前的租户和租户包含的日志流生成备份数据的任务，然后将备份任务分发到 OBServer 上并行地执行备份任务；OBServer 负责备份日志流的元信息和宏块到指定的备份目录，宏块以日志流为单位进行管理。
-
-## 物理恢复
-
-对于用户可见的流程主要有三步：
-
-1. 在目的集群上通过 `CREATE RESOURCE POOL` 命令建立恢复租户需要的资源池。
-
-2. 通过 `ALTER SYSTEM RESTORE TENANT` 命令调度租户恢复任务。
-
-   对于物理恢复来说，`RESTORE TENANT` 命令的内部流程如下：
-
-   1. 创建恢复用的租户。
-
-   2. 创建恢复的 Tablets。
-  
-   3. 恢复系统 Tablets。
-
-   4. 并发的恢复 Clog 和用户 Tablets 中的转储数据。
-  
-   5. 恢复用户用户 Tablets 的基线数据。
-  
-   6. 恢复扫尾工作。
-
-3. 通过 `ALTER SYSTEM ACTIVATE STANDBY TENANT tenant_name` 命令激活恢复的租户。
+关于物理备份与恢复的更多详细介绍，请参见 [备份恢复](../../../7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/5.backup-and-recovery/1.backup-and-recovery-overview.md) 章节。
