--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/3.initiate-incremental-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/3.initiate-incremental-data-backup.md
@@ -1,10 +1,10 @@
-# 发起增量备份
+# 发起增量数据备份
 
 增量备份是从上一个全量备份开始，备份所有修改过的宏块。
 
 ## 前提条件
 
-在执行增量备份前，请确保已经有全量备份存在。如果无全量备份，请先发起全量备份，相关操作请参见 [发起数据备份](2.initiate-full-data-backup.md)。
+在执行增量数据备份前，请确保已经有全量数据备份存在。如果无全量数据备份，请先发起全量数据备份，相关操作请参见 [发起全量数据备份](2.initiate-full-data-backup.md)。
   
 ## 发起增量备份
 
@@ -46,6 +46,8 @@
       </main>
 
       命令执行成功后，在本示例中，系统会对集群中的 `mysql_tenant` 租户发起增量数据备份。
+      
+   增量备份过程中，可以实时查看增量备份进度，具体操作请参见 [查看数据备份进度](5.view-data-backup-progress.md)。
 
 ### 用户租户发起增量备份
 
@@ -60,6 +62,10 @@
    ```sql
    obclient [(none)]> ALTER SYSTEM BACKUP INCREMENTAL DATABASE;
    ```
+
+   命令执行成功后，系统会对本租户发起增量数据备份。
+
+   增量备份过程中，可以实时查看增量备份进度，具体操作请参见 [查看数据备份进度](5.view-data-backup-progress.md)。
 
 ## 相关文档
 
