--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/7.parameters-of-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/7.parameters-of-data-backup.md
@@ -37,4 +37,18 @@
       obclient [(none)]>  ALTER SYSTEM SET ha_low_thread_score = 4 TENANT = mysql_tenant;
       ```
 
-      示例中，通过配置项 `ha_low_thread_score` 的值设置为 `4`，提高了该租户(`mysql_tenant` )备份任务所在优先级队列使用线程的时间片比例。
+      示例中，通过配置项 `ha_low_thread_score` 的值设置为 `4`，提高了该租户（`mysql_tenant`）备份任务所在优先级队列使用线程的时间片比例。
+
+   * 查看各租户的备份路径信息。
+
+     示例：
+
+     ```sql
+     obclient> SELECT * FROM oceanbase.CDB_OB_BACKUP_PARAMETER\G
+     *************************** 1. row ***************************
+     TENANT_ID: 1002
+          NAME: data_backup_dest
+         VALUE: file:///data/nfs/backup/data
+     ```
+
+     视图 `oceanbase.CDB_OB_BACKUP_PARAMETER` 用于查看当前集群中各租户的备份路径信息。例如，本示例中，`TENANT_ID` 为 `1002` 的租户的数据备份路径（`data_backup_dest`）为 `file:///data/nfs/backup/data`。
