根据泽永补充的内容合入

--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/1.overview-of-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/1.overview-of-log-archive.md
@@ -3,6 +3,16 @@
 
 本节主要介绍日志归档的相关概念及内部逻辑。
 
+## 日志归档架构
+
+日志归档就是将数据库产生的重做日志存储到其他介质（例如 `NFS` 、 `OSS` ）等，从而可以更长时间地保存数据库的所有重做历史操作记录。OceanBase 数据库是一个多租户数据库，每个租户可以独立决定是否开启日志归档功能，各租户之间的日志归档相互不影响。
+
+同时，OceanBase 数据库也是一个原生分布式数据库，租户内各日志流之间的归档也相互独立。从单个日志流来看，归档日志由日志流 Leader 负责，每个日志仅归档一份。归档过程中，由 `RS Leader` 负责根据每个日志流的归档进度，计算出当前租户的归档进度。
+
+日志归档架构如下图所示。
+
+![日志归档架构图](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/log-archive-architecture.png)
+
 ## 日志归档状态机
 
 ### 归档状态
