新增运维相关文档+补齐odbc命令行工具+英文目录+英文版本

--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/1.system-package-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/1.system-package-overview.md
@@ -44,7 +44,7 @@ PL 系统包概览
 下表列出了 OceanBase 数据库当前版本所支持的 PL 系统包和简要描述。
 
 
-|                                 系统包                                  |                      描述                       |Oracle 模式下是否支持| MySQl模式下是否支持|
+|                                 系统包                                  |                      描述                       |Oracle 模式下是否支持| MySQL 模式下是否支持|
 |----------------------------------------------------------------------|-----------------------------------------------|---------|---------|
 | [DBMS_AUDIT_MGMT](2.DBMS_AUDIT_MGMT/1.dbms_audit_mgmt-overview.md)       | 用于管理审计日志。                                     |支持|不支持|
 | [DBMS_APPLICATION_INFO](3.DBMS_APPLICATION_INFO/1.dbms_application_info-overview.md)  | 用于将应用程序名称注册在数据库中以进行审计或性能跟踪。                   |支持|不支持|
@@ -58,7 +58,7 @@ PL 系统包概览
 | [DBMS_OUTPUT](11.DBMS_OUTPUT/1.dbms_output-overview.md)           | 用于输入和输出信息。                                    |支持|不支持|
 | [DBMS_PLAN_CACHE](12.DBMS_PLAN_CACHE/1.dbms_plan_cache-overview.md)       | 从 Plan Cache 中移除指定 SQL。                       |支持|不支持|
 | [DBMS_RANDOM](13.DBMS_RANDOM/1.dbms_random-overview.md)           | 提供内置的随机数生成器。                                  |支持|不支持|
-| [DBMS_RESOURCE_MANAGER](14.DBMS_RESOURCE_MANAGER/1.dbms_resource_manager-overview.md)| 用于维护资源使用计划，资源使用组和资源计划指令。|支持|支持|
+| [DBMS_RESOURCE_MANAGER](14.DBMS_RESOURCE_MANAGER/1.dbms_resource_manager-overview.md)| 用于维护资源使用计划，资源使用组和资源计划指令。|支持|不支持|
 | [DBMS_SCHEDULER](15.DBMS_SCHEDULER/1.dbms_scheduler-overview.md)|用于管理定时任务。|支持|不支持|
 | [DBMS_SESSION](16.DBMS_SESSION/1.dbms_session_overview.md)          | 提供通过存储过程访问 SQL `ALTER SESSION` 语句和其他会话信息。     |支持|不支持|
 | [DBMS_SQL](17.DBMS_SQL/1.dbms_sql-overview.md)              | 使用动态 SQL 访问数据库。                               |支持|不支持|
