修改 8.tutorial-list.md fix meina

--- a/zh-CN/8.tutorial-list.md
+++ b/zh-CN/8.tutorial-list.md
@@ -1,6 +1,14 @@
-# 快速入门系列课程
+# 快速入门系列教程
 
 您可以观看视频快速了解 OceanBase 数据库的安装部署和基本操作。
+
+本教程主要介绍如何快速部署一套 OceanBase 数据库的测试体验环境，并提供了快速搭建应用以及 OceanBase 核心功能的快速体验指导。
+
+本教程涵盖以下内容：
+
+- 部署 OceanBase 数据库
+- 创建示例应用程序
+- 体验 OceanBase 高级特性（coming soon）
 
 ## 使用 OBD 快速部署 OceanBase 数据库
 
