--- a/zh-CN/6.manage/9.sql-tuning/2.plan-optimization/4.join-order-and-join-algorithm.md
+++ b/zh-CN/6.manage/9.sql-tuning/2.plan-optimization/4.join-order-and-join-algorithm.md
@@ -10,19 +10,19 @@
 
 一棵连接树一般表示为翻转的树状接口，如下图所示，`T1` 是连接左侧的表，也称之为驱动表，一般是维度表，`T2` 是连接右侧的表，一般是事实表。优化器一般自左向右处理连接的表。
 
-![](https://intranetproxy.alipay.com/skylark/lark/0/2022/jpeg/218546/1672306086246-e5e471ea-b978-4f04-8689-df10cfe80404.jpeg)
+![join1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V4.0.0/join1.jpg)
 
 连接的数据源也可以来自于另外一个连接的结果，如果左侧数据源来自于另一个连接的结果，右侧数据源来自于基表，我们称之为左深树，大部分的业务计划都是左深树。如下图所示。
 
-![](https://intranetproxy.alipay.com/skylark/lark/0/2022/jpeg/218546/1672306310626-bfd32877-a6f3-4d70-981d-a79758be3e70.jpeg)
+![join2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V4.0.0/join2.jpg)
 
 如果右侧数据源来自于另外一个连接的结果，左侧数据源来自于基表，我们称之为右深树，如下图所示。
 
-![](https://intranetproxy.alipay.com/skylark/lark/0/2022/jpeg/218546/1672306342259-08653ecf-1e57-4e7a-b11e-af4474a0a501.jpeg)
+![join3](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V4.0.0/join3.jpg)
 
 如果有任何一个连接节点与其他连接节点的形态不同，我们称之为浓密连接树，如下图所示。
 
-![](https://intranetproxy.alipay.com/skylark/lark/0/2022/jpeg/218546/1672306501977-37b2926a-ae19-4b2e-9152-1457b5d6d6e0.jpeg)
+![join4](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V4.0.0/join4.jpg)
 
 ### 优化器如何优化连接
 
