重新更新回收站相关的内容

--- a/zh-CN/6.manage/4.high-availability/5.flashback/3.recyclebin-management/3.view-the-recycle-bin-objects.md
+++ b/zh-CN/6.manage/4.high-availability/5.flashback/3.recyclebin-management/3.view-the-recycle-bin-objects.md
@@ -19,8 +19,11 @@
 1. `sys` 租户或用户租户的租户管理员登录到数据库。
 
    <main id="notice" type='explain'>
-        <h4>说明</h4>
-        <p>MySQL 租户的管理员用户为 <code>root</code> 用户，Oracle 租户的管理员用户为 <code>SYS<code> 用户。</p>
+   <h4>说明</h4>
+   <ul>
+   <li>MySQL 租户的管理员用户为 <code>root</code> 用户，Oracle 租户的管理员用户为 <code>SYS<code> 用户。</li>
+   <li>如果需要查看租户回收站对象，则需要使用 <code>sys</code> 租户登录数据库。</li>
+   </ul>
    </main>
 
    连接示例如下，连接数据库时请以实际环境为准。
@@ -68,6 +71,6 @@
 
 * [开启或关闭回收站](2.turn-the-recycle-bin-on-or-off.md)
 
-* [清理回收站](4.purge-the-recycle-bin.md)
+* [恢复回收站对象](4.restore-the-recycle-bin-obhects.md)
 
-* [闪回表](../1.flashback-table.md)
+* [清理回收站](5.purge-the-recycle-bin.md)
