--- a/zh-CN/6.manage/4.high-availability/5.flashback/3.recyclebin-management/5.purge-the-recycle-bin.md
+++ b/zh-CN/6.manage/4.high-availability/5.flashback/3.recyclebin-management/5.purge-the-recycle-bin.md
@@ -21,9 +21,13 @@
 1. `sys` 租户或用户租户的租户管理员登录到数据库。
 
    <main id="notice" type='explain'>
-        <h4>说明</h4>
-        <p>MySQL 租户的管理员用户为 <code>root</code> 用户，Oracle 租户的管理员用户为 <code>SYS<code> 用户。</p>
+   <h4>说明</h4>
+   <ul>
+   <li>MySQL 租户的管理员用户为 <code>root</code> 用户，Oracle 租户的管理员用户为 <code>SYS<code> 用户。</li>
+   <li>如果需要清理租户回收站对象，则需要使用 <code>sys</code> 租户登录数据库。</li>
+   </ul>
    </main>
+
 
    连接示例如下，连接数据库时请以实际环境为准。
 
@@ -52,7 +56,7 @@
 
    * 将租户从回收站中彻底清除
 
-     将租户从回收站中彻底清除时，租户下的所有对象也会一并被清除。仅 `sys` 租户支持清理回收站中的租户对象。
+     将租户从回收站中彻底清除时，租户下的所有对象也会一并被清除。仅 `sys` 租户支持清理租户回收站对象。
 
      语句如下：
 
@@ -172,4 +176,4 @@ OceanBase 数据库当前支持通过集群级配置项 `recyclebin_object_expir
 
 * [查看回收站对象](3.view-the-recycle-bin-objects.md)
 
-* [闪回表](../1.flashback-table.md)
+* [恢复回收站对象](4.restore-the-recycle-bin-obhects.md)
