--- a/zh-CN/6.manage/5.security-and-permissions/5.data-storage-encryption/2.data-storage-encryption-of-mysql-mode/3.unencrypt-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/5.data-storage-encryption/2.data-storage-encryption-of-mysql-mode/3.unencrypt-of-mysql-mode.md
@@ -33,10 +33,11 @@ obclient> SHOW CREATE TABLE t1;
 
 1. 管理员用户登录到数据库的 MySQL 租户。
 
-2. 对表执行渐进合并
+2. 对表执行渐进合并。
 
    1. 将 `progressive_merge_num` 的值设置为大于 `1` 的数，并执行 `OPTIMIZE` 命令，准备做渐进合并。
-   示例如下：
+   
+      示例如下：
 
       ```shell
       obclient> ALTER TABLE t1 SET progressive_merge_num = 3;       
@@ -44,7 +45,8 @@ obclient> SHOW CREATE TABLE t1;
       ```
 
    2. 手动发起多轮渐进合并。
-   发起一轮渐进合并的语句如下：
+   
+      发起一轮渐进合并的语句如下：
 
       ```shell
       obclient> ALTER SYSTEM MAJOR FREEZE;
