--- a/zh-CN/6.manage/5.security-and-permissions/5.data-storage-encryption/3.data-storage-encryption-of-oracle-mode/3.unencrypt-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/5.data-storage-encryption/3.data-storage-encryption-of-oracle-mode/3.unencrypt-of-oracle-mode.md
@@ -31,10 +31,12 @@ obclient> SHOW CREATE TABLE t1;
 ## 将表从加密表空间中移出
 
 1. 管理员登录到集群的 Oracle 租户。
-2. 对表执行渐进合并
+
+2. 对表执行渐进合并。
 
    1. 将 `progressive_merge_num` 的值设置为大于 `1` 的数，并执行 `SHRINK SPACE` 操作，准备做渐进合并。
-   示例如下：
+   
+      示例如下：
 
       ```shell
       obclient> ALTER TABLE t1 SET progressive_merge_num = 3;       
@@ -42,12 +44,13 @@ obclient> SHOW CREATE TABLE t1;
       ```
 
    2. 手动发起多轮渐进合并。
+      
       发起一轮渐进合并的语句如下：
 
       ```shell
       obclient> ALTER SYSTEM MAJOR FREEZE;
       ```
-
+      
    <main id="notice" type='explain'>
       <h4>说明</h4>
       <p>解除加密是异步过程，解密过程需要对表进行渐进合并保证所有数据解密。</p>
