--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/7.parameters-of-the-restore.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/7.parameters-of-the-restore.md
@@ -8,19 +8,19 @@
 
 * 恢复到指定时间戳
 
-   ```sql
+   ```shell
    obclient [(none)]>ALTER SYSTEM RESTORE dest_tenant_name FROM uri UNTIL TIME=timestamp WITH restore_option [DESCRIPTION description];
    ```
 
 * 恢复到指定 SCN
 
-   ```sql
+   ```shell
    obclient [(none)]>ALTER SYSTEM RESTORE dest_tenant_name FROM uri UNTIL SCN=scn WITH restore_option [DESCRIPTION description];
    ```
 
 * 恢复到最新位点
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM RESTORE dest_tenant_name FROM uri WITH restore_option [DESCRIPTION description];
    ```
 
@@ -43,7 +43,7 @@
 
 ### 命令
 
-```sql
+```shell
 obclient [(none)]> ALTER SYSTEM SET ha_low_thread_score =10 TENANT = mysql;
 ```
 
@@ -58,7 +58,7 @@ obclient [(none)]> ALTER SYSTEM SET ha_low_thread_score =10 TENANT = mysql;
 
 ### 命令
 
-```sql
+```shell
 obclient [(none)]> ALTER SYSTEM ACTIVATE STANDBY TENANT tenant_name;
 ```
 
