--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/3.collect-statistics-manually.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/3.collect-statistics-manually.md
@@ -61,7 +61,7 @@ PROCEDURE gather_index_stats (
 
 |        参数        |       解释     |
 |------------------|-------------------------|
-| ownname          | 用户名。如果用户名设置为 `NULL`，会默认使用当前登录用户名。    |
+| ownname          | <ul><li>Oracle 模式：用户名。</li><li>MySQL 模式：表所在数据库名称。</li></ul> 如果用户名设置为 `NULL`，会默认使用当前登录用户名。    |
 | tabname          | 表名。   |
 | indname          | 索引名。     |
 | partname         | 分区名。默认为 `NULL`。   |
