--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/1.gv-ob_sql_audit.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/1.gv-ob_sql_audit.md
@@ -102,24 +102,31 @@
 | ROW_CACHE_HIT           | bigint(20)          | number(38)     |行缓存命中次数     |
 | BLOOM_FILTER_CACHE_HIT  | bigint(20)          | number(38)     |Bloom Filter 缓存命中次数     |
 | BLOCK_CACHE_HIT         | bigint(20)          | number(38)     |块缓存命中次数      |
-| BLOCK_INDEX_CACHE_HIT   | bigint(20)          | number(38)     |块索引缓存命中次数     |
 | DISK_READS              | bigint(20)          | number(38)     |物理读次数  |
 | RETRY_CNT               | bigint(20)          | number(38)     |重试次数      |
 | TABLE_SCAN              | tinyint(4)          | number(38)     |判断该请求是否含全表扫描     |
 | CONSISTENCY_LEVEL       | bigint(20)          | number(38)     |一致性级别       |
 | MEMSTORE_READ_ROW_COUNT | bigint(20)          | number(38)     | `MEMSTORE` 中读的行数      |
 | SSSTORE_READ_ROW_COUNT  | bigint(20)          | number(38)     |`SSSTORE` 中读的行数       |
+| DATA_BLOCK_READ_CNT             | bigint(20)          | NO   |  访问的数据微块数量   |
+| DATA_BLOCK_CACHE_HIT            | bigint(20)          | NO   |  命中数据微块 Cache 数量   |
+| INDEX_BLOCK_READ_CNT            | bigint(20)          | NO   |  访问的中间层微块数量  |
+| INDEX_BLOCK_CACHE_HIT           | bigint(20)          | NO   |  命中中间层微块 Cache 数量  |
+| BLOCKSCAN_BLOCK_CNT             | bigint(20)          | NO   |  单边扫描的数据微块数量   |
+| BLOCKSCAN_ROW_CNT               | bigint(20)          | NO   |  单边扫描的数据行数   |
+| PUSHDOWN_STORAGE_FILTER_ROW_CNT | bigint(20)          | NO   |  下压存储 Filter 过滤后行数  |
 | REQUEST_MEMORY_USED     | bigint(20)          | number(38)     |该请求消耗的内存     |
 | EXPECTED_WORKER_COUNT   | bigint(20)          | number(38)     |请求期望的工作线程数    |
 | USED_WORKER_COUNT       | bigint(20)          | number(38)     |请求实际使用的工作线程数      |
 | SCHED_INFO              | varchar(16384)      | varchar(16384) | 请求的调度信息       |
 | FUSE_ROW_CACHE_HIT      | bigint(20)          | number(38)     |暂不支持该字段，字段默认为 `NULL`        |
-| PS_STMT_ID              | bigint(20)          | number(38)     |请求对应的 Prepare ID： <ul><li> `-1`：表示 SQL 语句没有使用 PS 协议 </li>  <li>非 `-1`：表示 SQL 语句使用了 PS 协议，表示 PS 协议对该语句返回的唯一标志  </li>  </ul>         |
-| TRANSACTION_HASH        | bigint(20) unsigned | number(38)     |请求对应的事务的 Hash 值       |
+| PS_CLIENT_STMT_ID              | bigint(20)          | NO             | 请求对应的 Prepare ID： <ul><li> `-1`：表示 SQL 语句没有使用 PS 协议  </li><li> 非 `-1`：表示 SQL 语句使用了 PS 协议，为 PS 协议在客户端对该语句返回的唯一标志</li></ul>    |
+| PS_INNER_STMT_ID              | bigint(20)          | NO             | 请求对应的 Prepare ID： <ul><li> `-1`：表示 SQL 语句没有使用 PS 协议   </li><li>> 非 `-1`：表示 SQL 语句使用了 PS 协议，为 PS 协议在内部对该语句返回的唯一标志</li></ul>    |
+|  TX_ID       | bigint(20)  | NO             | 请求对应的事务的 Hash 值     |
+|  SNAPSHOT_VERSION       | bigint(20)unsigned  | NO             | 当前语句的快照读版本号     |
 | REQUEST_TYPE            | bigint(20)          | number(38)     |请求对应的类型： <ul><li> 0：表示非法   <li> 1：表示是一个内部请求</li>  <li> 2：表示是一个本地请求，例如，Local 计划</li>   <li> 3：表示远程请求</li>   <li> 4：表示分布式请求 </li>  <li> 5：表示 SQL 的 Prepare 请求</li>   <li> 6：表示 SQL 得到 Execute Stmt 请求</li></ul>    |
 | IS_BATCHED_MULTI_STMT   | tinyint(4)          | number(38)     |是否进行 Batch Multi Stmt 的优化    |
 | OB_TRACE_INFO           | VARCHAR2(4096)      | VARCHAR2(4096)  |用户设置的 Trace 信息      |
 | PLAN_HASH               | bigint(20) unsigned | number(38)     |执行计划的 Hash 值   |
 | LOCK_FOR_READ_TIME      | bigint(20)          | number(38)     |读取数据时等待锁的耗时，单位：微秒       |
-| WAIT_TRX_MIGRATE_TIME   | bigint(20)          | number(38)     |写入数据时，等待事务因为内部合并机制而需要冻结，冻结过程中未完成的事务需要搬迁出来的耗时，单位：微秒       |
 | PARAMS_VALUE            | longtext            | CLOB      | 参数值      |
