--- a/zh-CN/7.reference/5.system-reference/2.system-variable-of-mysql-mode/74.ob_enable_show_trace-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/2.system-variable-of-mysql-mode/74.ob_enable_show_trace-of-mysql-mode.md
@@ -2,6 +2,11 @@
 
 ob_enable_show_trace 用于设置是否使用 show trace 日志。
 
+<main id="notice" type='explain'>
+ <h4>说明</h4>
+ <p><code>show trace</code> 功能在 4.0 版本暂不支持，4.1 版本支持。</p>
+</main>
+
 | **属性**  |                                                   **描述**                                                   |
 |---------|------------------------------------------------------------------------------------------------------------|
 | 参数类型    | bool                                                                                                       |
