--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/22.gv-sql_audit-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/22.gv-sql_audit-of-mysql-mode.md
@@ -77,27 +77,31 @@ GV$OB_SQL_AUDIT
 | ROW_CACHE_HIT           | bigint(20)          | NO             | 行缓存命中次数                                                                                                                                                                                                                                                                                                                                                                                                                      |
 | BLOOM_FILTER_CACHE_HIT  | bigint(20)          | NO             | Bloom Filter 缓存命中次数                                                                                                                                                                                                                                                                                                                                                                                                          |
 | BLOCK_CACHE_HIT         | bigint(20)          | NO             | 块缓存命中次数                                                                                                                                                                                                                                                                                                                                                                                                                      |
-| BLOCK_INDEX_CACHE_HIT   | bigint(20)          | NO             | 块索引缓存命中次数                                                                                                                                                                                                                                                                                                                                                                                                                    |
 | DISK_READS              | bigint(20)          | NO             | 物理读次数                                                                                                                                                                                                                                                                                                                                                                                                                        |
 | RETRY_CNT               | bigint(20)          | NO             | 重试次数                                                                                                                                                                                                                                                                                                                                                                                                                         |
 | TABLE_SCAN              | tinyint(4)          | NO             | 判断该请求是否含全表扫描                                                                                                                                                                                                                                                                                                                                                                                                                 |
 | CONSISTENCY_LEVEL       | bigint(20)          | NO             | 一致性级别                                                                                                                                                                                                                                                                                                                                                                                                                        |
 | MEMSTORE_READ_ROW_COUNT | bigint(20)          | NO             | MemStore 中的读行数                                                                                                                                                                                                                                                                                                                                                                                                               |
 | SSSTORE_READ_ROW_COUNT  | bigint(20)          | NO             | SSStore 中连读的行数                                                                                                                                                                                                                                                                                                                                                                                                               |
+| DATA_BLOCK_READ_CNT  | bigint(20)          | NO             | 访问的数据微块数量                                                                                                                                                                                                                                                                                                                                                                                                               |
+| DATA_BLOCK_CACHE_HIT  | bigint(20)          | NO             | 命中数据微块cache数量                                                                                                                                                                                                                                                                                                                                                                                                               |
+| INDEX_BLOCK_READ_CNT  | bigint(20)          | NO             | 访问的中间层微块数量                                                                                                                                                                                                                                                                                                                                                                                                               |
+| INDEX_BLOCK_CACHE_HIT  | bigint(20)          | NO             | 命中中间层微块cache数量                                                                                                                                                                                                                                                                                                                                                                                                               |
+| BLOCKSCAN_BLOCK_CNT  | bigint(20)          | NO             | 单边扫描的数据微块数量                                                                                                                                                                                                                                                                                                                                                                                                               |
+| BLOCKSCAN_ROW_CNT  | bigint(20)          | NO             | 单边扫描的数据行数                                                                                                                                                                                                                                                                                                                                                                                                               |
+| PUSHDOWN_STORAGE_FILTER_ROW_CNT  | bigint(20)          | NO             | 下压存储filter过滤后行数                                                                                                                                                                                                                                                                                                                                                                                                               |
 | REQUEST_MEMORY_USED     | bigint(20)          | NO             | 该请求消耗的内存                                                                                                                                                                                                                                                                                                                                                                                                                     |
 | EXPECTED_WORKER_COUNT   | bigint(20)          | NO             | 请求期望的工作线程数                                                                                                                                                                                                                                                                                                                                                                                                                   |
 | USED_WORKER_COUNT       | bigint(20)          | NO             | 请求实际使用的工作线程数                                                                                                                                                                                                                                                                                                                                                                                                                 |
 | SCHED_INFO              | varchar(16384)      | YES            | 请求的调度信息                                                                                                                                                                                                                                                                                                                                                                                                                      |
 | FUSE_ROW_CACHE_HIT      | bigint(20)          | NO             | 暂不支持该字段，字段默认为 NULL                                                                                                                                                                                                                                                                                                                                                                                                           |
-| PS_STMT_ID              | bigint(20)          | NO             | 请求对应的 Prepare ID： <li> `-1`：表示 SQL 语句没有使用 PS 协议   <li> 非 `-1`：表示 SQL 语句使用了 PS 协议，表示 PS 协议对该语句返回的唯一标志                                                                                                                                                                                                                            |
-| TRANSACTION_HASH        | bigint(20) unsigned | NO             | 请求对应的事务的 Hash 值                                                                                                                                                                                                                                                                                                                                                                                                              |
+| PS_CLIENT_STMT_ID      | bigint(20)          | NO             | 请求对应的 Prepare ID： <ul><li> `-1`：表示 SQL 语句没有使用 PS 协议  </li><li> 非 `-1`：表示 SQL 语句使用了 PS 协议，为 PS 协议在客户端对该语句返回的唯一标志</li></ul>                                                                                                                                                                                                                                                                                                                                                                                                           |
+| PS_INNER_STMT_ID      | bigint(20)          | NO             | 请求对应的 Prepare ID： <ul><li> `-1`：表示 SQL 语句没有使用 PS 协议   </li><li>> 非 `-1`：表示 SQL 语句使用了 PS 协议，为 PS 协议在内部对该语句返回的唯一标志</li></ul>                                                                                                                                                                                                                                                                                                                                                                                                            |
+| TX_ID      | bigint(20)          | NO             | 请求对应的事务 ID                                                                                                                                                                                                                                                                                                                                                                                                           |
+| SNAPSHOT_VERSION      | bigint(20)          | NO             | SQL语句使用的读快照版本                                                                                                                                                                                                                                                                                                                                                                                                           |
 | REQUEST_TYPE            | bigint(20)          | NO             | 请求对应的类型： <li> 0：表示非法   <li> 1：表示是一个内部请求   <li> 2：表示是一个本地请求，例如，Local 计划   <li> 3：表示远程请求   <li> 4：表示分布式请求   <li> 5：表示 SQL 的 Prepare 请求   <li> 6：表示 SQL 的 Execute Stmt 请求    |
 | IS_BATCHED_MULTI_STMT   | tinyint(4)          | NO             | 是否进行 Batch Multi Stmt 的优化                                                                                                                                                                                                                                                                                                                                                                                                    |
 | OB_TRACE_INFO           | varchar(4096)       | NO             | 用户设置的 Trace 信息                                                                                                                                                                                                                                                                                                                                                                                                               |
 | PLAN_HASH               | bigint(20) unsigned | NO             | 执行计划的 Hash 值                                                                                                                                                                                                                                                                                                                                                                                                                 |
 | LOCK_FOR_READ_TIME      | bigint(20)          | NO             | 读取数据时等待锁的耗时，单位：微秒                                                                                                                                                                                                                                                                                                                                                                                                            |
-| WAIT_TRX_MIGRATE_TIME   | bigint(20)          | NO             | 写入数据时，等待事务因为内部合并机制而需要冻结，冻结过程中未完成的事务需要搬迁出来的耗时，单位：微秒                                                                                                                                                                                                                                                                                                                                                                           |
 | PARAMS_VALUE            | longtext            | NO             | PS 绑定的参数值                                                                                                                                                                                                                                                                                                                                                                                                                    |
-
-
-
