--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/2.create-a-partition-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/2.create-a-partition-table-of-oracle-mode.md
@@ -164,18 +164,10 @@ Query OK, 0 rows affected
 Oracle 模式下，创建模板化二级分区表的 SQL 语法如下：
 
 ```sql
-CREATE TABLE [IF NOT EXISTS] table_name(column_option_list)
-  [table_option_list] [partition_option_list];
+CREATE TABLE [IF NOT EXISTS] table_name(column_option_list) partition_option_list;
 
 column_option_list:
   column_name column_type [, column_name column_type]
-
-table_option_list:
-  table_option [table_option]
-
-table_option:
-   LOCALITY [=] locality_name
-  | PRIMARY_ZONE [=] primary_zone_name
 
 partition_option:
   PARTITION BY 
@@ -290,8 +282,6 @@ partition_count | subpartition_count:
 | table_name        | 指定表名。                                                                                                    |
 | column_name       | 指定列名。                                                                                                    |
 | column_type       | 指定列数据类型。                                                                                                 |
-| locality_name     | 指定副本在 Zone 间的分布情况。例如：`F@zone1,F@zone2,F@zone3,F@zone4` 表示 `zone1`、 `zone2`、`zone3`、`zone4` 为全功能副本。 |
-| primary_zone_name | 指定主 Zone（副本 Leader 所在 Zone）。                                                                             |
 | partition_name    | 指定一级分区的名称。                                                                                               |
 | subpartition_name | 指定二级分区的名称。                                                                                               |
 | INT_VALUE         | 指定 Hash 类型的二级分区的个数。                                                                                      |
@@ -452,18 +442,10 @@ Query OK, 0 rows affected
 Oracle 模式下，创建非模板化二级分区表的 SQL 语法如下：
 
 ```sql
-CREATE TABLE [IF NOT EXISTS] table_name(column_option_list)
-  [table_option_list] [partition_option_list];
+CREATE TABLE [IF NOT EXISTS] table_name(column_option_list) partition_option_list;
 
 column_option_list:
   column_name column_type [, column_name column_type]
-
-table_option_list:
-  table_option [table_option]
-
-table_option:
-  LOCALITY [=] locality_name
-  | PRIMARY_ZONE [=] primary_zone_name
 
 partition_option_list:
   PARTITION BY 
@@ -520,8 +502,6 @@ hash_partition_option_list:
 | table_name        | 指定表名。                                                                                                    |
 | column_name       | 指定列名。                                                                                                    |
 | column_type       | 指定列数据类型。                                                                                                 |
-| locality_name     | 指定副本在 Zone 间的分布情况。例如：`F@zone1,F@zone2,F@zone3,F@zone4` 表示 `zone1`、 `zone2`、`zone3`、`zone4`  为全功能副本。 |
-| primary_zone_name | 指定主 Zone（副本 Leader 所在 Zone）。                                                                             |
 | partition_name    | 指定一级分区的名称。                                                                                               |
 | subpartition_name | 指定二级分区的名称。                                                                                               |
 
