--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/2.create-a-partition-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/2.create-a-partition-table-of-mysql-mode.md
@@ -212,18 +212,10 @@ OceanBase 数据库目前 MySQL 模式支持 Hash、Range、 List、Key、Range 
 创建模板化二级分区表的 SQL 语法如下：
 
 ```sql
-CREATE TABLE [IF NOT EXISTS] table_name(column_option_list)
-  [table_option_list] partition_option_list;
+CREATE TABLE [IF NOT EXISTS] table_name(column_option_list) partition_option_list;
 
 column_option_list:
   column_name column_type [, column_name column_type]
-
-table_option_list:
-table_option [table_option]
-
-table_option:
-      LOCALITY [=] locality_name
-    | PRIMARY_ZONE [=] primary_zone_name
 
 partition_option_list:
 PARTITION BY 
@@ -346,8 +338,6 @@ partition_count | subpartition_count:
 | table_name        | 指定表名。                                                                            |
 | column_name       | 指定列名。                                                                            |
 | column_type       | 指定列数据类型。                                                                         |
-| locality_name     | 指定副本在 Zone 间的分布情况。例如：`F@z1,F@z2,F@z3,F@z4` 表示 `z1`、 `z2`、`z3` 、`z4` 为全功能副本。 |
-| primary_zone_name | 指定主 Zone（副本 Leader 所在 Zone）。                                                     |
 | partition_name    | 指定一级分区名称。                                                                        |
 | subpartition_name | 指定二级分区名称。                                                                        |
 | INT_VALUE         | 指定 hash 或 Key 类型的二级分区个数。                                                         |
@@ -688,18 +678,10 @@ OceanBase 数据库目前 MySQL 模式支持 Hash、Range、 List、Key、Range 
 创建非模板化二级分区表的 SQL 语法如下：
 
 ```sql
-CREATE TABLE [IF NOT EXISTS] table_name(column_option_list)
-  [table_option_list] [partition_option_list];
+CREATE TABLE [IF NOT EXISTS] table_name(column_option_list) partition_option_list;
 
 column_option_list:
   column_name column_type [, column_name column_type]
-
-table_option_list:
-table_option [table_option]
-
-table_option:
-      LOCALITY [=] locality_name
-    | PRIMARY_ZONE [=] primary_zone_name
 
 partition_option_list:
 PARTITION BY 
@@ -769,8 +751,6 @@ key_partition_option_list:
 | table_name        | 指定表名。                                                                            |
 | column_name       | 指定列名。                                                                            |
 | column_type       | 指定列数据类型。                                                                         |
-| locality_name     | 指定副本在 Zone 间的分布情况。例如：`F@z1,F@z2,F@z3,F@z4` 表示 `z1`、 `z2`、`z3`、`z4`  为全功能副本。 |
-| primary_zone_name | 指定主 Zone（副本 Leader 所在 Zone）。                                                     |
 | partition_name    | 指定一级分区名称。                                                                        |
 | subpartition_name | 指定二级分区名称。                                                                        |
 | INT_VALUE         | 指定 hash 或 Key 类型的二级分区个数。                                                         |
