--- a/zh-CN/6.manage/4.high-availability/5.flashback/3.recyclebin-management/2.turn-the-recycle-bin-on-or-off.md
+++ b/zh-CN/6.manage/4.high-availability/5.flashback/3.recyclebin-management/2.turn-the-recycle-bin-on-or-off.md
@@ -39,7 +39,7 @@
 
    <main id="notice" type='notice'>
    <h4>注意</h4>
-   <p>如果需要管理租户回收站对象，则需要使用 <code>sys</code> 租户通过开启或关闭 Global 级别的回收站来完成。</p>
+   <p>如果需要管理租户回收站对象，则需要通过 <code>sys</code> 租户登录数据库开启或关闭回收站来完成。</p>
    </main>
 
    由于变量 `recyclebin` 为 Bool 类型的变量，故支持多种取值，其中：
