--- a/zh-CN/14.developer-guide/2.create-and-manage-database-objects/4.data-types/1.common-data-types.md
+++ b/zh-CN/14.developer-guide/2.create-and-manage-database-objects/4.data-types/1.common-data-types.md
@@ -52,10 +52,10 @@
 
 |       **分类**       |   **类型**   |            使用范围            |                描述                |
 |--------------------|------------|----------------------------|----------------------------------|
-| 类型 | TINYBLOB   | 最大 255K，不超过 255 个字符的二进制字符串 | 是最大长度为 256 个字节的 `BLOB` 类型。       |
-| 类型 | BLOB       | 最大 65K，二进制形式的长文本数据         | 是一个二进制大对象类型，可以存储可变数量的数据。         |
-| 类型 | MEDIUMBLOB | 最大 16M，二进制形式的中等长度文本数据      | 是最大长度为 16,777,216 字节的 `BLOB` 类型。 |
-| 类型 | LONGBLOB   | 最大 4G，二进制形式的极大文本数据         | 列的最大长度为 65,536 个字节。              |
+| 类型 | TINYBLOB   | 最大长度为 255（2^8-1）字节的的二进制字符串 | 每个 TINYBLOB 值都使用 1 字节长度的前缀存储，该前缀指示该值中的字节数。       |
+| 类型 | BLOB       | 最大长度为 65,535（2^16-1）字节的二进制形式长文本数据         | 是一个二进制大对象类型，可以存储可变数量的数据。每个BLOB值都使用2字节长度的前缀存储，该前缀指示该值中的字节数。         |
+| 类型 | MEDIUMBLOB | 最大长度为 16,777,215（2^24-1）字节的二进制形式中等长度文本数据      | 每个 MEDIUMBLOB 值都使用3字节长度的前缀存储，该前缀指示该值中的字节数。 |
+| 类型 | LONGBLOB   | 最大长度为 4,294,967,295 或 4GB（2^32-1）字节的二进制形式的极大文本数据         | LONGBLOB 列的有效最大长度取决于客户端/服务器协议和可用内存中配置的最大数据包大小。每个 LONGBLOB 值都使用 4 字节长度的前缀存储，该前缀指示该值中的字节数。              |
 
 ## 文本类型
 
